devices usage and uts
